--- a/src/global/_typography.scss
+++ b/src/global/_typography.scss
@@ -37,13 +37,13 @@ h1 {
 h2 {
     font-size: 2em;
     font-weight: 300;
-    margin: 1em 0 0.5em 0;
+    padding: 1em 0 0.5em 0;
 }
 
 h3 {
     font-size: 1.4em;
     font-weight: 400;
-    margin: 1em 0 0.5em 0;
+    padding: 1em 0 0.5em 0;
 }
 
 h4 {
